@@ -1,5 +1,8 @@
 2012-01-05  Jakub Jelinek  <jakub@redhat.com>
 
+	PR middle-end/51768
+	* c-c++-common/pr51768.c: New test.
+
 	PR middle-end/44777
 	* gcc.dg/tree-prof/pr44777.c: New test.
 
